# Sarvam_BiDirectional_VoiceBot

./: .gitignore  Dockerfile  README.md  _patch_intent.py  docker-compose.yml  pyproject.toml  test_client.html  test_pipeline.py
src/: __init__.py  config.py  logging_config.py  main.py
src/audio/: __init__.py  interruption_handler.py  stream_manager.py  vad_engine.py
src/banking/: __init__.py  api_client.py
src/conversation/: __init__.py  dialogue_manager.py  session_store.py  state.py
src/nlu/: __init__.py  entity_extractor.py  intent_detector.py  pipeline.py
src/server/: __init__.py  livekit_agent.py  voice_session.py  websocket_server.py
tests/: conftest.py  test_banking_api.py  test_dialogue.py  test_interruption.py  test_nlu.py  test_vad_engine.py
